Combatify 1.21.8 1.2.11 Fabric - fix tooltip